fix an overflow bug with small iphones

--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -10,6 +10,7 @@ body {
   font-weight: 700; */
 }
 
+
 .navbar {
   margin-top: 1em;
 }
@@ -32,6 +33,10 @@ body {
 
 .main {
   height: calc(100vh - 110px);
+}
+
+.main.row:before, .main.row:after {
+  display: none;
 }
 
 .about {
@@ -210,7 +215,7 @@ body {
   }
 }
 
-@media screen and (max-height: 760px) {
+@media screen and (max-height: 760px) and (min-width: 600px) {
   /* shift main content up to keep overlap effect  */
   .content {
     margin-bottom: 105px;
@@ -220,5 +225,15 @@ body {
 @media screen and (max-width: 322px) {
   .d-none-xs {
     display: none;
+  }
+}
+
+@media screen and (max-height: 400px) and (min-width: 760px) {
+  .welcome-header {
+    font-size: 2.5em;
+  }
+  .welcome-copy{
+    font-size: 1.1em;
+    line-height: 40px;
   }
 }
